--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 /* header*/
 
 
-
+/*
 .first-row {
 	display: grid;
 	grid-template-columns: 1fr 3fr 1fr;
@@ -44,20 +44,12 @@
 
 .form-sign-in {
 	padding-top: 25px;
-}
+}/*
 
 /*main*/
-.dummy-link {
-	display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    margin: 40px 0px 0px 30px;
-	text-align: center;
-	border: groove;
-	border-radius: 8px;
-	padding: 3px 5px 3px 5px;
-}
 
-.points {
+
+/*.points {
 	padding-left: 10px;
 	line-height: 25px;
 	font-weight: 700;
@@ -97,26 +89,33 @@
 }
 .main p {
 	color: #525350;
+}*/
+
+/* new lines*/
+
+/*.title-area {
+	grid-column: 1 / 2;
+	grid-row: 1 / 2;
 }
 
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-  color: green;
+.login-area {
+	grid-column: 2 / 3;
+	grid-row: 1 / 2;
 }
 
-a { 
-     color: #525350; 
-     background-color: transparent;
- }
-
-header {
-  margin: 35px 40px 30px 20px; 
+.navigator-primary {
+	grid-column: 1 / 3; 
+	grid-row: 2 / 3;
 }
 
-body {
-  background-color: #cbc186;
-  margin: 400;
+.primary-linkes {
+	display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  margin: 40px 0px 0px 30px;
+	text-align: center;
+	border: groove;
+	border-radius: 8px;
+	padding: 3px 5px 3px 5px;
 }
 
 main {
@@ -137,3 +136,196 @@ footer {
  	text-align: center;
 
  }
+*/
+
+
+
+.title {
+	text-transform: uppercase;
+	font-weight: 900;
+	color: blue;
+	background-color: white;
+	letter-spacing: -5px;
+	font: 56px monospace;
+}
+
+.eyelet {
+	padding-left: 40px ;
+	background-color: white;
+	color: orange;
+	font-weight: 900;
+	font-size: 20px;
+
+}
+
+.title-area {
+	grid-column: 1 / 3;
+	grid-row: 1 / 2;
+	padding: 25px 0px 25px 50px;
+}
+
+.login-area {
+	text-align: center;
+	grid-column: 3 / 4;
+	grid-row: 1 / 2;
+	padding: 0px 20px 0px 0px;
+}
+
+.navigator-primary {
+	grid-column: 1 / 4; 
+	grid-row: 2 / 3;
+}
+
+.primary-linkes {
+	display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    margin: 0px 0px 0px 30px;
+	text-align: center;
+	border: groove;
+	border-radius: 8px;
+	padding: 3px 5px 3px 5px;
+	background-color: blue;
+	border-color: blue;
+}
+
+.text-search {
+}
+
+.sign{
+	font-family:  Verdena;
+	padding: 2px 5px 2px 5px;
+	border: groove;
+	border-radius: 8px;
+	background-color: white;
+	color: blue;
+}
+
+.logout {	
+	font-family:  Verdena;
+	font-weight: 700px;
+	padding: 2px 5px 2px 5px;
+	border: groove;
+	border-radius: 8px;
+	border-color: blue;
+	background-color: white;
+	color: orange;
+}
+
+.main-bar {
+ grid-column: 1 / 3;
+}
+
+.side-bar {
+	grid-column: 3 / 4;
+}
+
+.side-bar.h2
+
+.text {
+}
+
+.side-text{
+}
+
+.side-image{
+width: 300px;	
+}
+
+.main-bar{
+	padding: 0px 40px 20px 40px;
+}
+
+.standard-image{
+	width: 400px;
+	display: block;
+	margin-left: auto;
+ 	margin-right: auto;
+}
+
+.standard-article {
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+.contact {
+	color: white;
+	font-weight: 100px;
+	font-size: 22px;
+}
+
+.contact-element {
+	font-size: 16px;
+	height: 40px;
+}
+
+hr {
+	color: orange;
+	opacity: 0.3;
+
+}
+
+html {
+  	line-height: 1.15; /* 1 */
+  	-webkit-text-size-adjust: 100%; /* 2 */
+  	color: black;
+}
+
+a { 
+  	color: white; 
+  	background-color: blue;
+  	border-color: blue;
+}
+
+header {
+	background-color: white;
+	width: 868px;
+	padding: 36px;
+	margin-left: auto;
+  	margin-right: auto;
+	display: grid;
+  	grid-template-columns: repeat(3, 1fr);
+  	grid-auto-rows: minmax( 50px, auto);
+  	grid-gap: 20px;
+}
+
+body {
+  	margin: 400;
+  	background-color: grey;
+}
+
+main {
+	background-color: white;
+	width: 868px;
+	padding: 36px;
+	margin-left: auto;
+  	margin-right: auto;
+  	display: grid;
+  	grid-template-columns: repeat(3, 1fr);
+  	grid-auto-rows: minmax( 50px, auto);
+  	grid-gap: 20px;
+}
+
+h2 {
+	color: blue;
+}
+
+h4 {
+	color: grey;
+	text-align: right;
+	padding-right: 10px;
+}
+
+footer {
+	border: groove;
+	background-color: blue;
+	border-color: blue;
+	height: auto;
+	width: 868px;
+	padding: 0px 36px 50px 36px;
+	margin-left: auto;
+  	margin-right: auto;
+  	line-height:60px;
+
+}
+
+
