Change Menu links text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
 <head>	
 	<title>Blog</title>
 	<link rel="stylesheet" type="text/css" href="/assets/css/normalize.css">
-	
 	<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 	<style>
    		.my-class { color: cyan; }
@@ -34,14 +33,14 @@
 			</div>
 			<div class="navigator-primary">
 				<div class="primary-linkes"> 
-					<a href="#">dummy link0  </a>
-					<a href="#">dummy link1  </a>
-					<a href="#">dummy link2  </a>
-					<a href="#">dummy link3  </a>
-					<a href="#">dummy link4  </a>
-					<a href="#">dummy link5  </a>
-					<a href="#">dummy link6  </a>
-					<a href="#">dummy link7  </a>
+					<a href="#">item</a>
+					<a href="#">item</a>
+					<a href="#">item</a>
+					<a href="#">item</a>
+					<a href="#">item</a>
+					<a href="#">item</a>
+					<a href="#">item</a>
+					<a href="#">item</a>
 				</div>	
 			</div>  		
 		</header>
