--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>	
 	<title>Blog</title>
-	<link rel="stylesheet" type="text/css" href="/assets/css/normalize.css">\
+	<link rel="stylesheet" type="text/css" href="/assets/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 	<style>
    		.my-class { color: cyan; }
@@ -11,7 +11,7 @@
 </head>
 
 
-<body>
+<body> 
 	<div class="wrapper">
 		<header>
 			<div class="title-area">
@@ -32,14 +32,14 @@
 				</div>
 				<div class="navigator-primary">
 					<div class="primary-linkes"> 
-						<a href="#">item</a>
-						<a href="#">item</a>
-						<a href="#">item</a>
-						<a href="#">item</a>
-						<a href="#">item</a>
-						<a href="#">item</a>
-						<a href="#">item</a>
-						<a href="#">item</a>
+						<a href="#">Item</a>
+						<a href="#">Item</a>
+						<a href="#">Item</a>
+						<a href="#">Item</a>
+						<a href="#">Item</a>
+						<a href="#">Item</a>
+						<a href="#">Item</a>
+						<a href="#">Item</a>
 					</div>	
 				</div>  		
 			</header>
@@ -75,15 +75,25 @@
 				</div>  
 			</main>
 			<footer>
-				<div class="contact" >Contact Olivier Lorenzo:
+				<div class="contact">
+					<h2>Contact Olivier Lorenzo:</h2>
 					<div class="contact-element">
-						<a href="https://github.com/sidvecious" class="sign" >Github Account </a>
+						<a class="toolpip" href="https://github.com/sidvecious">
+							<img src=assets/img/github.svg class="button">
+								<span class="sign">Github</span>		
+						</a>
 					</div>
-					<div class="contact-element">
-						<a href="mailto:lorenzo.olivier@zoho.eu" class="logout"> lorenzo.olivier@zoho.eu<a/>
+					<div class="contact-element">	
+						<a class="toolpip" href="mailto:lorenzo.olivier@zoho.eu">
+							<img src=assets/img/mail.svg class="button" class="mail">
+								<span class="sign">lorenzo.olivier@zoho.eu</span>		
+						</a>
+					</div>			
+					<div class="copyright">
+						<a>  © 2020 Olivier Lorenzo </a>
 					</div>
 				</div>		
 			</footer>
-		<div/>				
+		</div>				
 	</body>
 </html>
